--- a/docs/markdown.css
+++ b/docs/markdown.css
@@ -37,7 +37,7 @@ body {
   line-height: 1.5;
   color: #fff;
   font-family: recursive-sans-linear-regular, sans-serif;
-  font-size: 1.1em;
+  font-size: 20px;
   line-height: 1.5;
   word-wrap: break-word;
 }
